# CDB_slides_player

./: .gitignore  README.md
player-app/: .gitignore  README.md
player-app/scripts/: build-macos.sh  make-latest-json.sh
player-app/src-tauri/: Cargo.toml  tauri.conf.json
player-app/src-tauri/capabilities/: default.json
player-app/src-tauri/icons/: icon.icns
player-app/src-tauri/src/: main.rs
player-app/ui/: index.html
player-web/: .gitignore  README.md  editor.html  index.html  server.py  start.command
