[package]
name = "cdbrain-slide-player"
version = "0.1.0"
edition = "2021"
description = "CDBrain Slide Player — lokale Playlist-Verwaltung & Präsentation"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
